fix: Reduce clickable area of titles to visible space in collection cards

--- a/app/javascript/scss/elements/_collection.scss
+++ b/app/javascript/scss/elements/_collection.scss
@@ -60,7 +60,7 @@
 }
 
 .collection__title {
-  display: block;
+  display: inline-block;
   margin-bottom: math.div($margin, 16);
   color: $text-color-lightest;
   font-size: 18px;
@@ -93,8 +93,8 @@
 .collection__posts {
   display: flex;
   gap: $margin * 0.125;
-  margin: 0 $margin * 0.25 * -1;
-  padding: 0 $margin * 0.25;
+  margin: -0.5rem $margin * 0.25 * -1;
+  padding: 0.5rem $margin * 0.25;
   overflow: auto;
   scrollbar-width: none;
   filter: drop-shadow(0 4px 2px rgba(0, 0, 0, .1)) drop-shadow(0 8px 4px rgba(0, 0, 0, 0.1)) drop-shadow(0 32px 16px rgba(0, 0, 0, 0.1));
